<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnFragment1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:onClick="menuClick"
        android:text="@string/menu"
        android:textSize="9sp"
        app:layout_constraintEnd_toStartOf="@+id/btnFragment2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp,UsingOnClickInXml" />

    <Button
        android:id="@+id/btnFragment2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:onClick="weatherClick"
        android:text="@string/weather"
        android:textSize="9sp"
        app:layout_constraintEnd_toStartOf="@+id/btnFragment3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFragment1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp,UsingOnClickInXml" />

    <Button
        android:id="@+id/btnFragment3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:onClick="detailsClick"
        android:text="@string/details"
        android:textSize="9sp"
        app:layout_constraintEnd_toStartOf="@+id/btnFragment4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFragment2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp,UsingOnClickInXml" />

    <Button
        android:id="@+id/btnFragment4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:onClick="forecastClick"
        android:text="@string/forecast"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFragment3"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp,UsingOnClickInXml" />

    <FrameLayout
        android:id="@+id/flFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFragment2" />

</androidx.constraintlayout.widget.ConstraintLayout>